--- a/src/partials/html-head.html
+++ b/src/partials/html-head.html
@@ -11,6 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
 
-  <!-- Bitte ignorieren, das ist nur die Zugriffs-Statistik der Shop-Demo -->
+  <!-- Please ignore, this are only the access statistics of the shop demo. -->
   <include src="partials/please-ignore--statistics.html"></include>
 </head>
