--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -1,14 +1,14 @@
 <div id="carousel" class="carousel">
     <ul>
         <li class="slide">
-            <img src="img/tees.jpg" alt="Lose Tees auf goldenen Löffeln in Nahaufnahme." class="slide-img" />
+            <img src="img/tees.jpg" alt="Loose tea leaves on golden spoons in close-up." class="slide-img" />
             <h2>Hot loose teas</h2>
             <p>
                 This is just a boring marketing text in the tea-themed carousel. A boring marketing text in the tea-themed carousel.                <a href="#">Visit the tea section</a>
             </p>
         </li>
         <li class="slide" >
-            <img src="img/podcast.jpg" alt="Eine begeisterte Frau mit Kopfhörern." class="slide-img" />
+            <img src="img/podcast.jpg" alt="An enthusiastic woman with headphones." class="slide-img" />
             <h2>New podcast headphones have arrived!</h2>
             <p>
                 This is just a boring marketing text in the carousel on the subject of headphones. A boring marketing text in the carousel on the subject of headphones.
@@ -16,7 +16,7 @@
             </p>
         </li>
         <li class="slide" >
-            <img src="img/weed.jpg" alt="Socken mit Mariuana-Pflanzen-Aufdruck, in rot, grün und gelb." class="slide-img" />
+            <img src="img/weed.jpg" alt="Socks with marijuana plant print shapes in red, green and yellow." class="slide-img" />
             <h2>Socks for “hemp-ions“</h2>
             <p>This is just a boring marketing text in the carousel on the subject of socks. A boring marketing text in the carousel on the subject of socks.
                 <a href="#">Visit the socks section</a>
